syntax = "proto3";

package pb;

option go_package = "github.com/kyamalabs/users/pb";

message DeleteProfileRequest {
  string wallet_address = 1;
}
